data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureNetherBridgePieces.Corridor4.md
---
title: "StructureNetherBridgePieces.Corridor4"
description: "public static class StructureNetherBridgePieces.Corridor4 extends StructureComponent"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureNetherBridgePieces.Corridor4.html"
sourceType: javadoc
---

# StructureNetherBridgePieces.Corridor4

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureNetherBridgePieces.Corridor4

## Class signature

```java
public static class StructureNetherBridgePieces.Corridor4 extends StructureComponent
```

## Constructors

- `Corridor4()`
- `Corridor4(int p_i2046_1_, java.util.Random p_i2046_2_, StructureBoundingBox p_i2046_3_, int p_i2046_4_)`

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `void buildComponent(StructureComponent p_74861_1_, java.util.List p_74861_2_, java.util.Random p_74861_3_)`
- `static StructureNetherBridgePieces.Corridor4 createValidComponent(java.util.List p_74985_0_, java.util.Random p_74985_1_, int p_74985_2_, int p_74985_3_, int p_74985_4_, int p_74985_5_, int p_74985_6_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `protected StructureComponent getNextComponentNormal(StructureNetherBridgePieces.Start p_74963_1_, java.util.List p_74963_2_, java.util.Random p_74963_3_, int p_74963_4_, int p_74963_5_, boolean p_74963_6_)`
- `protected StructureComponent getNextComponentX(StructureNetherBridgePieces.Start p_74961_1_, java.util.List p_74961_2_, java.util.Random p_74961_3_, int p_74961_4_, int p_74961_5_, boolean p_74961_6_)`
- `protected StructureComponent getNextComponentZ(StructureNetherBridgePieces.Start p_74965_1_, java.util.List p_74965_2_, java.util.Random p_74965_3_, int p_74965_4_, int p_74965_5_, boolean p_74965_6_)`
- `protected static boolean isAboveGround(StructureBoundingBox p_74964_0_)`

## Fields

- `protected static WeightedRandomChestContent [] field_111019_a`
